feat: altera título do site

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Roben Costa"
 title: "Roben Costa"
-description: "Roben Costa, Spring, Java, Blog"
+description: "Engenheiro de Software | Desenvolvedor Back-end"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /robencosta.github.io
