--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "Roben Costa"
 title: "Roben Costa"
 description: "Engenheiro de Software | Desenvolvedor Back-end"
-logo:
-favicon: 
+logo: ''
+favicon: ''
 baseurl: /robencosta.github.io
 google_analytics: 'UA-46278016-1'
 disqus: 'demowebsite'
